--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
     <!-- Import RNBO Engine Wrapper -->
     <!-- Make sure to include the RNBO engine version to the version of your exported code, found in rnbopackage.json -->
     <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="playlist-ui.js"></script>
+    <script src="playlist-ui.js"></script>
 </body>
 </html>
