--- a/playlist.html
+++ b/playlist.html
@@ -6,7 +6,7 @@
   <title>Playlist</title>
 
   <!-- Playlist UI skin -->
-  <link rel="stylesheet" href="css/playlist.css">
+  <link rel="stylesheet" href="style/playlist.css">
 
   <!-- Minimal safety reset (optional but recommended) -->
   <style>
