--- a/playlist.html
+++ b/playlist.html
@@ -24,7 +24,7 @@
   </div>
 
   <!-- RNBO runtime + playlist UI -->
-  <script src="js/app.js"></script>
-  <script src="js/playlist-ui.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="js/playlist-ui.js"></script>
 </body>
 </html>
