adds fixed position for controls area

--- a/playlist.html
+++ b/playlist.html
@@ -8,12 +8,14 @@
   <!-- Playlist UI skin -->
   <link rel="stylesheet" href="style/playlist.css">
 
-  <!-- Minimal safety reset (optional but recommended) -->
+  <!-- Minimal safety reset -->
   <style>
     html, body {
       margin: 0;
       padding: 0;
+      height: 100%;
       background: transparent;
+      overflow: hidden; /* internal list scrolls */
     }
   </style>
 </head>
