iframe adjustments for mobile

--- a/playlist.html
+++ b/playlist.html
@@ -5,18 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Playlist</title>
 
-  <!-- Playlist UI skin -->
   <link rel="stylesheet" href="style/playlist.css">
 
-  <!-- Minimal safety reset -->
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background: transparent;
-      overflow: hidden; /* internal list scrolls */
-    }
+    html, body { height: 100%; }
   </style>
 </head>
 
@@ -25,7 +17,6 @@
     <div id="playlist-ui"></div>
   </div>
 
-  <!-- RNBO runtime + playlist UI -->
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/playlist-ui.js"></script>
 </body>
