--- a/playlist.html
+++ b/playlist.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Playlist</title>
+    <meta charset="UTF-8">
+    <title>RNBO Playlist UI</title>
 
-  <link rel="stylesheet" href="style/playlist.css">
+    <!-- Reference CSS for Header and Playlist Items (your provided styles) -->
+    <link rel="stylesheet" href="style/HeaderTransport_Default Component.css">
+    <link rel="stylesheet" href="style/PlaylistItem_Default Component.css">
 
-  <style>
-    html, body { height: 100%; }
-  </style>
+    <!-- Your main playlist project CSS (keep if it has utility styles) -->
+    <link rel="stylesheet" href="style/playlist.css">
 </head>
-
 <body>
-  <div class="wrap">
-    <div id="playlist-ui"></div>
-  </div>
-
-  <script type="text/javascript" src="js/app.js"></script>
-  <script type="text/javascript" src="js/playlist-ui.js"></script>
+    <!-- Example structure; preserve your app container and IDs -->
+    <div id="app">
+        <!-- RNBO patcher title gets set by app.js -->
+        <h1 id="patcher-title"></h1>
+        <!-- Main content injected by playlist-ui.js -->
+        <div id="rnbo-content"></div>
+    </div>
+    <!-- Scripts -->
+    <script src="app.js"></script>
+    <script src="playlist-ui.js"></script>
 </body>
 </html>
