corrected directory ref to js/ instead of root

--- a/playlist.html
+++ b/playlist.html
@@ -20,7 +20,7 @@
         <div id="rnbo-content"></div>
     </div>
     <!-- Scripts -->
-    <script src="app.js"></script>
-    <script src="playlist-ui.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/playlist-ui.js"></script>
 </body>
 </html>
