claude code attempt!

--- a/playlist.html
+++ b/playlist.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>RNBO Playlist UI</title>
 
-    <!-- Reference CSS for Header and Playlist Items (your provided styles) -->
-    <link rel="stylesheet" href="style/HeaderTransport_Default Component.css">
-    <link rel="stylesheet" href="style/PlaylistItem_Default Component.css">
+    <!-- Penpot-generated component CSS -->
+    <link rel="stylesheet" href="style/newHeaderTransport_Default_Component.css">
+    <link rel="stylesheet" href="style/newPlaylistItem_Default_Component.css">
 
-    <!-- Your main playlist project CSS (keep if it has utility styles) -->
+    <!-- Layout and additional styles -->
     <link rel="stylesheet" href="style/playlist.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
         <!-- RNBO patcher title gets set by app.js -->
         <h1 id="patcher-title"></h1>
         <!-- Main content injected by playlist-ui.js -->
-        <div id="rnbo-content"></div>
+        <div id="playlist-ui"></div>
     </div>
     <!-- Scripts -->
     <script src="js/app.js"></script>
