small adjustments to FTW

--- a/speakspell.html
+++ b/speakspell.html
@@ -26,6 +26,14 @@
                 <div id="main-waveform-container" class="waveform-display">
                     <canvas id="main-waveform" width="800" height="100"></canvas>
                     <div id="playhead-line"></div>
+                    <!-- Loading overlay -->
+                    <div id="loading-overlay">
+                        <div class="loading-text vfd-text">LOADING</div>
+                        <div class="loading-bar-track">
+                            <div id="loading-bar-fill"></div>
+                        </div>
+                        <div id="loading-status" class="vfd-text">0 / 0</div>
+                    </div>
                 </div>
 
                 <!-- Progress bar -->
